# orchestrator

./: .gitignore  Cargo.toml  README.adoc  test_reqs.http
db/: create_db.sh  db.sql
src/: api.rs  config.rs  crd.rs  helper.rs  k8s_api.rs  main.rs  models.rs  resource_api.rs  storage.rs  storage_sqlite.rs  watch.rs
